# dart_monty

./: .gitignore  .gitleaks.toml  .markdownlintignore  .pre-commit-config.yaml  .pubignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  analysis_options.yaml  dcm_options.yaml  pre-release-plan.md  pubspec.yaml
.github/: release.yml
.github/workflows/: _publish-dart-package.yaml  ci.yaml  dcm.yaml  pages.yaml  pr-labeler.yml  prepare-release.yaml  publish_dart_monty.yaml  publish_desktop.yaml  publish_ffi.yaml  publish_native.yaml  (+7 more)
ci-review/: CONTRIBUTING.md  baseline.json
docs/: INSTALL.md  PLAN.md  api-coverage-plan.md  api-gap-demos.md  api-gap-ladder-tests.md  architecture-analysis.md  architecture.md  demo-vision.md  live-shape-negotiation-research.md  monty-rust-api.md  refactoring-plan.md  refactoring-slices.md  skill.md  state-persistence-design.md  state-persistence-slices.md
example/: .gitignore  example.dart
lib/: dart_monty.dart
native/: Cargo.toml  build.rs  rust-toolchain.toml
native/include/: dart_monty.h
native/src/: convert.rs  error.rs  handle.rs  lib.rs
native/tests/: integration.rs
tool/: analyze_packages.py  build_native.sh  gate.sh  generate_bindings.sh  metrics.sh  publish.sh  slice_review.sh  stamp_changelogs.sh  test_cross_path_parity.sh  test_desktop.sh  test_ffi.sh  test_m1.sh  test_m2.sh  test_m3a.sh  test_native.sh  test_platform_interface.sh  test_python_ladder.sh  test_rust.sh  test_snapshot_portability.sh  test_wasm.sh  test_web.sh  test_web_spike.sh  vendor_native.sh  verify_publish.sh
(+81 files in other folders)
