[package]
name = "dart_monty_native"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "dart_monty_native"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git", rev = "87f8f31" }
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
